# clustering-feat-sel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yaml  ci.yaml
src/: featclus.py
src/featclus/: __init__.py
test/: conftest.py  test_model.py
