[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FeatClus"
version = "0.1.0"
description = "This library is built to perform feature selection in clustering models"
readme = "README.md"
authors = [{ name = "Sebastian Sarasti", email = "sebitas.alejo@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Unsupervised Learning", "Machine Learning", "Clustering"]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0"

    "numpy==2.1.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "pytest==8.3.3"
]
requires-python = ">=3.12.7"

[project.urls]
Homepage = "https://github.com/sebassaras02/featclus"